SET(CMAKE_C_COMPILER /usr/bin/clang)
SET(CMAKE_CXX_COMPILER /usr/bin/clang++)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)

cmake_minimum_required(VERSION 3.22)


PROJECT(ThreadPool C CXX)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)


ADD_SUBDIRECTORY(src LIBRARY_OUTPUT_PATH)

ADD_SUBDIRECTORY(tests EXECUTABLE_OUTPUT_PATH)


